# Google-Test-Practice

AssetManagerInterface/: CMakeLists.txt
AssetManagerInterface/Database_files/: AssetManagerDBService.cpp  AssetManagerDBService.h  AssetManagerDBServiceInterface.h  CMakeLists.txt
AssetManagerInterface/Database_files/_test/: AssetManagementDBTest.cpp  CMakeLists.txt  main.cpp
AssetManagerInterface/googletest/: CMakeLists.txt
AssetManagerInterface/googletest/googlemock/: CMakeLists.txt
